# gerenciamento-estagios

./: .env  .env.example  .gitignore  README.md  composer.json  docker-compose.yml  docker-compose.yml.back  orientadores-teste.csv  package-lock.json  package.json  tailwind.config.js
.docker/: Dockerfile  Dockerfile.back  vhost.conf
app/: helpers.php
app/Http/: Kernel.php
app/Models/: Aluno.php  AlunosAviso.php  Atividade.php  AtividadeFile.php  Aviso.php  Documento.php  Horario_orientacao.php  Orientador.php  Registro.php  Rpod.php  Turma.php  User.php
app/Providers/: RouteServiceProvider.php
config/: app.php  services.php
database/factories/: OrientadorFactory.php  UserFactory.php
database/migrations/: 2014_10_12_000000_create_users_table.php  2022_04_04_1801_create_orientadores_table.php  2022_04_04_1802_create_turmas_table.php  2022_04_04_1803_create_alunos_table.php  (+11 more)
db/: auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
public/: storage
resources/gerador-de-declara-es/: .gitignore  exec.py  pyproject.toml  readme.md
resources/gerador-de-declara-es/gerar_declaracao_banca/: content.py  fixed_content.py  gerar_declaracao.py  main.py  styles.py
resources/gerador-de-declara-es/gerar_declaracao_banca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
resources/gerador-de-declara-es/gerar_declaracao_banca/dados/: docInfo.csv  infoCursos.csv
resources/gerador-de-declara-es/tests/: test_gerar_declaracao_banca.py
routes/: auth.php  web.php
(+261 files in other folders)
