[tool.poetry]
name = "gerar-declaracao-banca"
version = "0.1.0"
description = "Programa para gerar declarações de bancas de apresentação de TCC da instituição UNIFIL"
authors = ["Walter Marinho <waltersmarinho@edu.unifil.br>"]

[tool.poetry.dependencies]
python = "^3.8"
reportlab = "^3.5.42"
gender-guesser = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
